--- a/pages/map/detail.wxml
+++ b/pages/map/detail.wxml
@@ -1,19 +1,33 @@
 <view class="page-body">
-  <view class="page-section page-section-gap">
-    <map
-      id="myMap"
-      style="width: 100%; height: 300px;"
-      latitude="{{latitude}}"
-      longitude="{{longitude}}"
-      markers="{{markers}}"
-      covers="{{covers}}"
-      show-location
-    ></map>
-  </view>
-  <view class="btn-area">
-    <button bindtap="getCenterLocation" class="page-body-button" type="primary">获取位置</button>
-    <button bindtap="moveToLocation" class="page-body-button" type="primary">移动位置</button>
-    <button bindtap="translateMarker" class="page-body-button" type="primary">移动标注</button>
-    <button bindtap="includePoints" class="page-body-button" type="primary">缩放视野展示所有经纬度</button>
-  </view>
+	<view class="page-section page-section-gap">
+    
+		<map id="myMap" latitude="{{latitude}}" longitude="{{longitude}}" markers="{{markers}}"
+		show-location bindupdated="bindupdated" bindregionchange="bindregionchange">
+		</map>
+		<view wx:if="{{isUpdated}}" class="iconfont icon-mylocation" id="location" 
+		bindtap="onLocation"></view> 
+		
+		<view class="mui-content margin-b-15">
+			<ul class="list media-list">
+				<li class="list-item list-item-middle" wx:for="{{list}}" wx:key="*this" bindtap="onPOILoc" data-id="{{item.id}}">
+					<view class="media-list-item-inner">
+						<view class="list-item-inner">
+							<view class="list-item-text">
+								<view class="list-item-title">
+									{{item.title}}
+								</view>
+							</view>
+							<view class="list-item-text">
+								<p class="ellipsis-1 font-size-12">
+									{{item.address}}
+								</p>
+							</view>
+              <view wx:if="{{item.isSel}}" class="list-item-right iconfont icon-checkmark">
+                </view>
+						</view>
+					</view>
+				</li>
+			</ul>
+		</view>
+	</view>
 </view>
