--- a/pages/map/detail.wxss
+++ b/pages/map/detail.wxss
@@ -106,128 +106,42 @@ a:-webkit-any-link {
   margin-bottom: 30rpx;
 }
 #myMap{
-  height: 55%;
+  height: -webkit-calc(100% - 80px);
   width:100%;
 }
 #location{
   width:30px;
   height:30px;
-  position: absolute;
-  top:55%;
+  position: fixed;
+  top:-webkit-calc(100% - 70px);
   right: 0;
   font-size: 24px;
   color:green;
   z-index: 999;
 }
+.locDesc{
+  width: 100%;
+  background: #fff;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: 80px
+}
+.locDesc a{
+  font-size:16px;
+  line-height:26px;
+  text-overflow:ellipsis;
+  overflow:hidden;
+  margin-right:35px;
+  position:absolute;
+  text-align:left;
+  bottom:15px;
+  top:15px;
+  left: 20px;
+  -webkit-line-clamp:2;
+  -webkit-box-orient:vertical;
+  display:-webkit-box;
+}
 
-.margin-b-15 {
-    margin-bottom: 0.75rem !important;
-}
-.mui-content {
-    background-color: #efeff4;
-    height: 45%;
-    margin-right: 40px;
-}
 
-.list {
-    padding: 0;
-    margin: 0;
-    position: relative;
-    font-size: 0.8rem;
-}
-.list .list-item {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    color: #212121;
-    background-color: #ffffff;
-    position: relative;
-    min-height: 2.2rem;
-    box-sizing: border-box;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-}
-.media-list-item-inner {
-    box-sizing: border-box;
-    display: flex;
-    padding-left: 10px;
-}
-.media-list .list-item-inner {
-    display: block;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-}
-.list .list-item-right{
-    max-width: 50%;
-    position: absolute;
-    font-size: 14px;
-    color:green;
-    margin-left: 0.25rem;
-    right:0;
-    bottom: 35%;
-}
-.list .list-item-inner {
-    position: relative;
-    min-height: 2.2rem;
-    padding-right: 0.25rem;
-    width: 100%;
-    box-sizing: border-box;
-    -webkit-box-flex: 1;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    align-items: center;
-}
-.list .list-item-text {
-    font-size: 0.7rem;
-    color: #757575;
-    position: relative;
-    box-sizing: border-box;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    align-items: center;
-}
-.list .list-item-title {
-    font-size: 0.8rem;
-    position: relative;
-    max-width: 100%;
-    color: #212121;
-}
-.list .list-item-text {
-    font-size: 0.7rem;
-    color: #757575;
-    position: relative;
-    box-sizing: border-box;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    align-items: center;
-}
-.list .list-item-inner p {
-    overflow: hidden;
-}
-.font-size-12 {
-    font-size: 0.6rem !important;
-}
-.ellipsis-1 {
-    display: -webkit-box;
-    text-overflow: ellipsis;
-    word-wrap: break-word;
-    white-space: normal !important;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-}
-.list .list-item:after {
-    width: 100%;
-    height: 1px;
-    background-color: #dddddd;
-    display: block;
-    content: '';
-    position: relative;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 999;
-    -webkit-transform-origin: 50% 100%;
-    transform-origin: 50% 100%;
-    pointer-events: none;
-}
