--- a/pages/login/index.wxml
+++ b/pages/login/index.wxml
@@ -1,18 +1,23 @@
-<view class="page-body">
-  <view class="page-section">
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input">
-        <input class="weui-input" auto-focus placeholder="手机号/用户名"/>
-      </view>
+<import src='../../utils/toast/toast.wxml' />
+<template is="toast" data="{{ ..._toast_ }}"/>
+
+<view class="container">
+  <view class="login-from">
+    <view class="input">
+        <!--账号-->
+        <view class="inputView">
+          <input class="inputText" placeholder="手机号/用户名" bindinput="phoneInput" value='{{phone}}'/>
+        </view>
+        <view class="line"></view>
+    
+        <!--密码-->
+        <view class="inputView">
+          <input class="inputText" password="true" placeholder="密码" bindinput="passwordInput" />
+        </view>
     </view>
-  </view>
-  <view class="page-section">
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input">
-        <input class="weui-input" maxlength="20" placeholder="密码" />
-      </view>
+    <!--按钮-->
+    <view class="loginBtnView">
+      <button class="loginBtn" type="primary" size="{{primarySize}}" loading="{{loading}}" plain="{{plain}}" disabled="{{disabled}}" bindtap="login" hover-class='hover'>登录</button>
     </view>
   </view>
 </view>
-
-<button bindtap="onLogin">登录</button>
