--- a/pages/login/index.wxss
+++ b/pages/login/index.wxss
@@ -1,4 +1,84 @@
-.page-section{
-  margin-bottom: 20rpx;
+page{
+  height: 100%;
 }
-button {margin: 10px;text-align: center;height:2rem}
+ 
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #f2f2f2
+} 
+ 
+/*登录图片*/
+.login-icon{
+  flex: none;
+}
+.login-img{
+  width: 750rpx;
+}
+ 
+/*表单内容*/
+.login-from {
+  margin-top: 20px;
+  flex: auto;
+  height:100%;
+}
+ 
+.inputView {
+  background-color: #fff;
+  line-height: 44px;
+}
+/*输入框*/
+.nameImage, .keyImage {
+  margin-left: 22px;
+  width: 14px;
+  height: 14px
+}
+ 
+.loginLab {
+  margin: 15px 15px 15px 10px;
+  color: #545454;
+  font-size: 14px
+}
+.inputText {
+  flex: block;
+  color: black;
+  font-size: 14px;
+  height:44px;
+  padding: 0 15px 0 15px;
+}
+ 
+.line {
+  width: 100%;
+  height: 0.5px;
+  background-color: #cccccc;
+  margin-top: 0.5px;
+}
+/*按钮*/
+.loginBtnView {
+  width: 100%;
+  height: auto;
+}
+ 
+.loginBtn {
+  width:calc(100% - 30px);
+  margin-top: 20px;
+  height: 40px;
+  font-size: 16px;
+}
+
+.input{
+  height: 88px;
+  border-radius:3px;
+  border:solid 0.5px #eee;
+  margin:0 15px;
+}
+button[type=primary]{
+  background-color: #4290d7;/*蓝色*/
+  border-radius: 3px;
+}
+.hover{
+  background-color: #4290d7;
+}
