--- a/utils/wxSortPickerView/wxSortPickerView.wxss
+++ b/utils/wxSortPickerView/wxSortPickerView.wxss
@@ -1,9 +1,8 @@
 .wxSortPickerViewTemTags{
   position: fixed;
-  top: 10px;
+  top: 20%;
   right: 0;
-  background-color: #fff;
-  color: cornflowerblue;
+  color: gray;
 }
 .wxSortPickerViewTemTag{
   text-align: center;
@@ -26,8 +25,18 @@
 }
 
 .wxSortPickerViewItem{
-  height: 40px;
-  line-height: 40px;
+  height: 44px;
+  line-height: 44px;
   border-bottom: 1px solid #eee;
   margin-left: 5px;
+}
+
+.wxSortPickerViewItem image{
+  width:30px;
+  height: 30px;
+  vertical-align: middle;
+}
+.wxSortPickerViewItem text{
+  font-size: 14px;
+  margin-left: 10px;
 }
