--- a/app.wxss
+++ b/app.wxss
@@ -2,3 +2,7 @@
 @import "utils/style.wxss";
 @import "utils/wxParse/wxParse.wxss";
 @import "utils/toast/toast.wxss";
+
+page{
+  background-color: #eee;
+}
