--- a/pages/msg/index.wxss
+++ b/pages/msg/index.wxss
@@ -20,12 +20,12 @@
     display: block;
 }
 .list .wechat-avatar {
-    width: 3rem;
+    width: 58px;
 }
 .list .list-item-media {
     position: relative;
-    padding: 0.5rem 0;
-    padding-right: 0.75rem;
+    padding: 10px 0;
+    padding-right: 10px;
     display: inherit;
     flex-shrink: 0;
     flex-wrap: nowrap;
@@ -44,7 +44,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    padding-left: 0.75rem;
+    padding-left: 10px;
     color: #212121;
     background-color: #ffffff;
     position: relative;
@@ -64,9 +64,9 @@ ul, li {
 }
 .wechat-avatar .row-padded {
     background-color: #dddee0;
-    padding: 0.05rem;
-    margin-left: -0.05rem;
-    margin-right: -0.05rem;
+    padding: 1px;
+    margin-left: -1px;
+    margin-right: -1px;
     width:100%;
     height:100%;
 }
@@ -109,7 +109,7 @@ ul, li {
     align-items: center;
 }
 .font-size-12 {
-    font-size: 0.6rem !important;
+    font-size: 12px !important;
 }
 .list .list-item-inner p {
     overflow: hidden;
