--- a/utils/wxSortPickerView/wxSortPickerView.wxss
+++ b/utils/wxSortPickerView/wxSortPickerView.wxss
@@ -29,6 +29,7 @@
   line-height: 44px;
   border-bottom: 1px solid #eee;
   margin-left: 5px;
+  background-color: #fff;
 }
 
 .wxSortPickerViewItem image{
