--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -93,7 +93,7 @@
 <view class="tuijian_item">
   <view class="type_title">
     <span>最新案例</span>
-    <a href="javascript:;" bindtap="onCaseIndex">更多<i class="iconfont"></i></a>
+    <a href="javascript:;" bindtap="onCaseIndex">更多<i class="iconfont icon-gengduo"></i></a>
   </view>
   <view id="last_case">
   <block wx:for="{{latestCases}}" wx:key="item.id">
@@ -120,7 +120,7 @@
 <view class="tuijian_item">
   <view class="type_title">
     <span>热门案例</span>
-    <a href="javascript:;" bindtap="onCaseIndex">更多<i class="iconfont"></i></a>
+    <a href="javascript:;" bindtap="onCaseIndex">更多<i class="iconfont icon-gengduo"></i></a>
   </view>
   <view id="hot_case">
     <block wx:for="{{hotCases}}" wx:key="item.id">
