--- a/pages/login/index.wxss
+++ b/pages/login/index.wxss
@@ -46,8 +46,8 @@ page{
   flex: block;
   color: black;
   font-size: 14px;
-  height:44px;
-  padding: 0 15px 0 15px;
+  height: 55px;
+  padding: 0 15px;
 }
  
 .line {
@@ -70,7 +70,7 @@ page{
 }
 
 .input{
-  height: 88px;
+  /* height: 88px; */
   border-radius:3px;
   border:solid 0.5px #eee;
   margin:0 15px;
