--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -10,7 +10,7 @@ section{
 .mui-table-view-cell {
     position: relative;
     overflow: hidden;
-    padding: 8px 20px;
+    padding: 10px 15px;
     -webkit-touch-callout: none;
     -webkit-flex: 1; /* Safari 6.1+ */
     flex: 1;
@@ -109,4 +109,7 @@ p{
   height: 15px;
   margin-left: -25px;
   padding-right: 10px;
+}
+.desc{
+  font-size:12px;
 }
