--- a/utils/wxSortPickerView/wxSortPickerView.wxml
+++ b/utils/wxSortPickerView/wxSortPickerView.wxml
@@ -1,7 +1,7 @@
 
 <template name="wxSortPickerView">
 <!--滚动视图  -->
-    <scroll-view class="wxSortPickerViewList" scroll-y="true" style="height: {{wxSortPickerData.view.scrollHeight}}px;" bindscrolltoupper="wxSortPickerViewUpper" bindscrolltolower="wxSortPickerViewLower" bindscroll="wxSortPickerViewScroll" scroll-into-view="{{wxSortPickerData.wxSortPickerViewtoView}}" scroll-top="{{wxSortPickerData.wxSortPickerViewScrollTop}}">
+    <scroll-view class="wxSortPickerViewList" scroll-y="true" style="height: {{wxSortPickerData.view.scrollHeight}}px;" bindscrolltoupper="wxSortPickerViewUpper" bindscrolltolower="wxSortPickerViewLower" bindscroll="wxSortPickerViewScroll" scroll-into-view="{{wxSortPickerData.wxSortPickerViewtoView}}" >
 
         <block wx:for="{{wxSortPickerData.list}}" wx:for-item="item" wx:key="">
             <view id="{{item.tag}}" class="wxSortPickerViewTag">{{item.tag}}</view>
