--- a/pages/connection/index.wxml
+++ b/pages/connection/index.wxml
@@ -1,3 +1,3 @@
-
+<loading hidden="{{loadFinish}}" bindchange="loadingChange" />
 <import src="../../utils/wxSortPickerView/wxSortPickerView.wxml"/> 
 <template is="wxSortPickerView" data="{{wxSortPickerData}}"/>
